--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jquery": "^2.0.0",
     "laravel-elixir": "^6.0.0-2",
     "laravel-elixir-livereload": "^1.1.4",
-    "laravel-elixir-webpack-ex": "^0.0.4",
+    "laravel-elixir-webpack-ex": "0.0.4",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "source-map-loader": "0.1.5",
