--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "laravel-elixir": "^6.0.0-2",
     "laravel-elixir-livereload": "^1.1.4",
     "laravel-elixir-webpack-ex": "0.0.4",
+    "ng2-bootstrap": "^1.0.17",
+    "ng2-table": "^1.0.2",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "source-map-loader": "0.1.5",
